styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

Body {
  font-family: "poppins", sans-serif;
  color: #30261c;
}

body,
html {
  overflow-x: hidden;
  scroll-behavior: smooth;
}

.navbar {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10;

  /*background fix when scrolling*/

  background: linear-gradient(
    to bottom,
    rgba(99, 72, 58, 0.95) 0%,
    rgba(99, 72, 58, 0.6) 80%,
    transparent 90%
  );

  /*blur behind the navbar*/
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
}

/* navbar links */
.navbar a {
  font-family: "poppins", sans-serif;
}

/* hero section */
.hero {
  min-height: 864px;
  padding-top: 200px; /*navbar height*/
  background: linear-gradient(to bottom, #63483a 0%, #63483a 40%, #868686 100%);
  overflow: hidden;
}

h1 {
  font-family: "playfair display", sans-serif;
  font-size: 72px;
}

h2 {
  font-family: "playfair display", sans-serif;
  font-size: 25px;
}

h5 {
  font-family: "Outfit", sans-serif;
  color: #30261c;
}

.hero-contents {
  color: white;
}

.c-nav-pill {
  border: 2px solid white;
  border-radius: 50px;
  padding-left: 50px;
  padding-right: 50px;
}

.c-btn-round {
  border-radius: 50px;
}

.no-padding {
  padding-left: 0;
  padding-right: 0;
}

.hero-img {
  position: absolute;
  top: -480px; /* or top: 50%; adjust as needed */
  left: 50%;
  transform: translateX(-50%); /* center image horizontally */
  width: 150%; /* make the image larger */
  max-width: none; /* override Bootstrap limits */
  height: auto;
}

.hero-float {
  animation: float 6s ease-in-out infinite;
}

/* coffee beans positioning */
.bean {
  position: absolute;
}

.bean-1 {
  top: -170px;
  left: 300px;
  width: 70px;
  animation: float 6s ease-in-out infinite;
  animation-delay: 0s;
}

.bean-2 {
  top: 0;
  right: -60px;
  animation: float 6.7s ease-in-out infinite;
  animation-delay: 0.5s;
  animation-direction: alternate-reverse;
}

.bean-3 {
  top: -210px;
  left: 0;
  width: 45px;
  animation: float 10s ease-in-out infinite;
  animation-delay: 1.3s;
}

.bean-4 {
  top: 0;
  left: 300px;
  width: 50px;
  animation: float 8s ease-in-out infinite;
  animation-delay: 0.6s;
  animation-direction: reverse;
}

.facebook-icon {
  width: 33px;
}

.instagram-icon {
  width: 33px;
}

/*FEATURED SECTION*/
.featured {
  background-color: #e2d9c8;
  overflow: hidden;
}

.card {
  border: none;
  background-color: transparent;
  min-height: 100%;
}
.gap-8 {
  gap: 6rem;
}

/*why choose us section*/
.btn-primary {
  background-color: #30261c;
  color: white;
  transition: all 0.3s;
}

.btn-primary:hover {
  background-color: white;
  color: black;
}

/*Animations*/

@keyframes float {
  0% {
    transform: translate(0px, 0px);
  }
  25% {
    transform: translate(10px, -8px);
  }
  50% {
    transform: translate(5px, 20px);
  }
  75% {
    transform: translate(-2px, 11px);
  }
  100% {
    transform: translate(-5px, 2px);
  }
}

@keyframes simpleFloat {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-5px);
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(20px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.simple-float {
  animation: simpleFloat 6s ease-in-out infinite;
}

.fade-in {
  opacity: 0;
  transform: translateY(20px);
  animation: fadeIn 0.8s ease forwards;
}

